--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -70,36 +70,36 @@
                                 </div>
                             </div>
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_21.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>搬瓦工如何搭建ssr高速节点?</strong></a><br> Automatic payments First and foremost: we never charge your Credit Card or Paypal account automatically. We do not store customer's payment info...
                             <br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_6.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>搬瓦工ssr节点有多快？</strong></a><br> Terms of Service     By using or otherwise engaging any of the computer systems, services, resources, or facilities that we make availab...<br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_24.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>搬瓦工一键安装v2Ray节点！</strong></a><br> In many cases connectivity issues may arise from incorrect iptables configuration. Very often misconfigured iptables is the result of a recent change ...<br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_22.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>如何使用搬瓦工vps建站?</strong></a><br> Changing billing cycle It is possible to modify billing cycle without having to contact support. Please note, however, that if you have already re...<br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_4.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>如何使用搬瓦工vps建站?</strong></a><br> Yes, we have 30-day no questions asked money back guarantee, subject to our Terms of Services. Please submit a request for full refund by navigating t...<br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_26.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>搬瓦工服务器速度有多快？</strong></a><br> So you have just found out that you no longer have access to your VPS. Let's find out what is causing the issue. We will be using ping.pe for our trou...<br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_28.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>最佳搬瓦工服务器方案！</strong></a><br> It is possible to use affiliate links with our mirror domain in the same way as with our primary domain (bandwagonhost.com). Here is how it works: ...
                             <br><br>
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_17.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>如何申请搬瓦工退款？</strong></a><br> We use KVM with our own proprietary management software (KiwiVM).<br><br>
                             <img src='static/picture/article.gif'>
                             <a href='kb-displayarticle_3.html' class='fontsize2'>
@@ -107,7 +107,7 @@
                             <br><br>
 
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_12.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>如何在搬瓦工上使用支付宝续费?</strong></a><br> Generally no, unless there is an issue with our service that prevents your application from operating normally. If you need help installing or configu...<br><br>
 
                         </div>
