--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -102,7 +102,7 @@
                             <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>如何申请搬瓦工退款？</strong></a><br> We use KVM with our own proprietary management software (KiwiVM).<br><br>
                             <img src='static/picture/article.gif'>
-                            <a href='kb-displayarticle_3.html' class='fontsize2'>
+                            <a href='kb-displaycat_1.html' class='fontsize2'>
                                 <strong>搬瓦工优惠码有哪些?</strong></a><br> This is possible due to the very efficient server management workflows we've been developing since 2003. For example, our entire infrastructure relies...
                             <br><br>
 
