--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>搬瓦工VPS(中文版)</title>
-    <meta name='description' http-equiv='description' content='Inexpensive VPS hosting on premium hardware with RAID-10 SAS disks and E5 CPUs. Premium Gigabit bandwidth.'>
+    <meta name='description' http-equiv='description' content='搬瓦工Bandwagon Host 是一家加拿大提供VPS服务的公司，其价格非常实惠,中国大陆地区访问速度非常快，支持支付宝付款，而且具有良好的性能和优秀的稳定性。'>
+    <meta name='keywords' http-equiv='description' content='搬瓦工,搬瓦工VPS,搬瓦工官网,搬瓦工优惠码'>
     <meta name="keywords" content="vps hosting, cheap vps, vps server">
     <link rel="stylesheet" type="text/css" href="static/css/whmcs.css">
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
