--- a/kb-displaycat_4.html
+++ b/kb-displaycat_4.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>搬瓦工教程</title>
-    <meta name='description' http-equiv='description' content='搬瓦工稳定性好，提供的VPS服务器配置也比同等价格的其他厂商高，而且提供DDoS防护和数据备份等服务，让用户使用得更加安心、放心。'>
-    <meta name="keywords" content="搬瓦工,BandwagonHost,搬瓦工官网,搬瓦工教程,搬瓦工优惠码">
+    <title>如何使用搬瓦工vps建站?</title>
+    <meta name='description' http-equiv='description' content='使用搬瓦工VPS（虚拟专用服务器）来建站需要首先选择适合你需求的VPS套餐，购买后可以在搬瓦工后台进行初始设置和配置。'>
+    <meta name="keywords" content="搬瓦工建站,vps建站,Shadowsocks,ShadowsocksR协议,搬瓦工优惠码">
     <link rel="stylesheet" type="text/css" href="static/css/whmcs.css">
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="static/css/fonts.css">
@@ -47,7 +47,7 @@
         <div class="bannercon">
             <div class="wrapper">
                 <div class="bannersub">
-                    <h1>搬瓦工教程</h1>
+
                 </div>
             </div>
         </div>
@@ -56,60 +56,22 @@
                 <div class="contentlt">
                     <div class="boxlt">
                         <div class="whmcscontainer">
-
+                            <p>&gt; <a href="index.html">首页</a>&gt; <a href="knowledgebase.html">知识库</a> &gt; <a href="kb-displaycat_4.html">如何使用搬瓦工vps建站？</a></p>
+                            <p><br></p>
                             <div class="page-header">
                                 <div class="styled_title">
-                                    <h2>搬瓦工教程</h2>
+                                    <h1>如何使用搬瓦工vps建站？</h1>
                                 </div>
                             </div>
-                            <img src='static/picture/folder.gif'> <a href='knowledgebase_bwg_1.html' class='fontsize2'><strong>如何使用？</strong></a> (12)<br><img src='static/picture/folder.gif'> <a href='knowledgebase_bwg_2.html' class='fontsize2'><strong>如何建站？</strong></a>                            (1)<br><img src='static/picture/folder.gif'> <a href='knowledgebase_bwg_3.html' class='fontsize2'><strong>如何部署SSR专属网络？</strong></a> (2)<br><img src='static/picture/folder.gif'> <a href='knowledgebase_bwg_4.html' class='fontsize2'><strong>搬瓦工优惠信息！</strong></a>                            (3)<br>
-                            <br><br>
-                            <div class="page-header">
-                                <div class="styled_title">
-                                    <h2>最新文章</h2>
-                                </div>
-                            </div>
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_2.html' class='fontsize2'>
-                                <strong>搬瓦工如何搭建ssr高速节点?</strong></a><br> 购买服务器：首先，您需要购买一台具有良好带宽和运行速度的服务器。推荐使用云服务器，例如AWS EC2或DigitalOcean等。...
-                            <br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_3.html' class='fontsize2'>
-                                <strong>搬瓦工ssr节点有多快？</strong></a><br> 搬瓦工（BandwagonHost）SSR节点的速度取决于多种因素，例如您购买的服务器类型、服务器所在地区和您所连接的网络等。...<br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>搬瓦工一键安装v2Ray节点！</strong></a><br> SSR节点是指能够正确解析ShadowsocksR协议的服务器节点。ShadowsocksR是一种基于Shadowsocks修改而来的加强版...<br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_4.html' class='fontsize2'>
-                                <strong>如何使用搬瓦工vps建站?</strong></a><br> 使用搬瓦工VPS（虚拟专用服务器）来建站需要首先选择适合你需求的VPS套餐，购买后可以在搬瓦工后台进行初始设置和配置...<br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>如何使用搬瓦工vps建站?</strong></a><br> Yes, we have 30-day no questions asked money back guarantee, subject to our Terms of Services. Please submit a request for full refund by navigating t...<br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>搬瓦工服务器速度有多快？</strong></a><br> So you have just found out that you no longer have access to your VPS. Let's find out what is causing the issue. We will be using ping.pe for our trou...<br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>最佳搬瓦工服务器方案！</strong></a><br> It is possible to use affiliate links with our mirror domain in the same way as with our primary domain (bandwagonhost.com). Here is how it works: ...
-                            <br><br>
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>如何申请搬瓦工退款？</strong></a><br> We use KVM with our own proprietary management software (KiwiVM).<br><br>
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>搬瓦工优惠码有哪些?</strong></a><br> This is possible due to the very efficient server management workflows we've been developing since 2003. For example, our entire infrastructure relies...
-                            <br><br>
-
-                            <img src='static/picture/article.gif'>
-                            <a href='kb-displaycat_1.html' class='fontsize2'>
-                                <strong>如何在搬瓦工上使用支付宝续费?</strong></a><br> Generally no, unless there is an issue with our service that prevents your application from operating normally. If you need help installing or configu...<br><br>
-
+                            <p>使用搬瓦工VPS（虚拟专用服务器）来建站需要经过以下步骤：</p>
+                            <p>1、购买并配置VPS服务器：首先选择适合你需求的VPS套餐，购买后可以在搬瓦工后台进行初始设置和配置。</p>
+                            <p>2、安装并配置Web服务器：一般情况下，我们建站时都会使用Apache或Nginx这样的Web服务器软件。您可以通过SSH连接到VPS，安装所需的软件，并进行基本的配置。</p>
+                            <p>3、建立网站文件夹：创建一个存放网站文件的文件夹。</p>
+                            <p>4、将网站文件上传至服务器：您可以通过FTP等方式将网站文件上传至服务器上新建的文件夹中。</p>
+                            <p>5、配置数据库：如果您需要使用MySQL等数据库软件，则需要在服务器上进行安装和配置，并创建相应的数据库。</p>
+                            <p>6、配置域名：将您已经购买的域名指向您的VPS服务器IP地址，并将域名和IP地址绑定。</p>
+                            <p>7、测试和优化：最后，进行测试以确保网站正常运行，并对性能进行优化，以提高用户体验和SEO排名。</p>
+                            <p>需要注意的是，以上步骤仅供参考，建议根据您的具体需求和技术水平进行调整和完善。</p>
                         </div>
                     </div>
                 </div>
